fix(styling) gives sub doc remove buttons a z-index so they can be clicked in bs3

--- a/less/forms-angular-bs3-specific.less
+++ b/less/forms-angular-bs3-specific.less
@@ -97,6 +97,10 @@ form {
     margin-left: 12px;
   }
 
+  .sub-doc-btns {
+    z-index: 1;
+  }
+
   //  .radio input[type="radio"], .radio-inline input[type="radio"], .checkbox-inline input[type="checkbox"]
   .checkbox input[type="checkbox"] {
     margin-left: -5px;
